profilelist1exp/unpackaged/objects/Track__c.object
<CustomObject>
    <description>Track related data which helps to identify the business relationship with Dell</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Technologies_Business__c</fullName>
        <label>Dell Technologies Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Program_Track__c</fullName>
        <label>Partner Program Track</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Service Provider</fullName>
                </value>
                <value>
                    <fullName>Consumer Partner</fullName>
                </value>
                <value>
                    <fullName>Consumer Distributor</fullName>
                </value>
                <value>
                    <fullName>OEM Distributor</fullName>
                </value>
                <value>
                    <fullName>Sub Distributor</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>OEM Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>Federal Cloud Service Provider</fullName>
                </value>
                <value>
                    <fullName>Federal Distributor</fullName>
                </value>
                <value>
                    <fullName>Federal OEM</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Distributor</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Federal Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Federal Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>Commercial Distributor</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>Financial Service Provider</fullName>
                </value>
                <value>
                    <fullName>OEM Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SUGGESTION_ID__c</fullName>
        <label>SUGGESTION ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_AffinityId__c</fullName>
        <externalId>true</externalId>
        <label>Track AffinityId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>A country or group of countries who are bucketed based on their market type. 
Zone 1 = mature markets
Zone 2 = emerging and/or smaller markets</description>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
                <value>
                    <fullName>Zone 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Track</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Track_AffinityId__c</columns>
        <columns>Zone__c</columns>
        <columns>Country_Code__c</columns>
        <columns>Partner_Program_Track__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>